the "Seams from islands" in UVs menu can't mark up edges as cyan color when select "Mark sharp" option at fist time #46450

Closed
opened 2015-10-12 12:08:18 +02:00 by Leroy · 4 comments

System Information
windows 7 sp1 64bit

Blender Version
Broken: 2.76 release 48f7dd6
Worked: (optional)

the "Seams from islands" in UVs menu can't mark up edges as cyan color when select "Mark sharp" option at fist time

You know the edges with "mark sharp" will become in cyan color, and the "Seams from islands" can mark seams and sharp by the islands, but when you select "mark sharp" from this option at fist time( never mark edges sharp operate at before ), the edges have be marked sharp, but the edges color won't change, if you random select one edge and use "mark sharp" from Ctrl+E in 3d view, the color will be changed and all be correct.

sorry for my poor English, the same problem in blender 2.74, and test in factory setting

**System Information** windows 7 sp1 64bit **Blender Version** Broken: 2.76 release 48f7dd6 Worked: (optional) the "Seams from islands" in UVs menu can't mark up edges as cyan color when select "Mark sharp" option at fist time You know the edges with "mark sharp" will become in cyan color, and the "Seams from islands" can mark seams and sharp by the islands, but when you select "mark sharp" from this option at fist time( never mark edges sharp operate at before ), the edges have be marked sharp, but the edges color won't change, if you random select one edge and use "mark sharp" from Ctrl+E in 3d view, the color will be changed and all be correct. sorry for my poor English, the same problem in blender 2.74, and test in factory setting
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

This issue was referenced by 5e75acf81d

This issue was referenced by 5e75acf81d57bd577abba0818ac98d221299181e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46450
No description provided.