Fix T46450: Seams from islands, wont show 'Sharp'