source/blender/editors/uvedit/uvedit_ops.c
@@ -4119,7 +4119,13 @@ static int uv_seams_from_islands_exec(bContext *C, wmOperator *op)
 		}
 	}
 
-	me->drawflag |= ME_DRAWSEAMS;
+	if (mark_seams) {
+		me->drawflag |= ME_DRAWSEAMS;
+	}
+	if (mark_sharp) {
+		me->drawflag |= ME_DRAWSHARP;
+	}
+
 
 	BM_uv_vert_map_free(vmap);
 
